--- a/xml/lang/ru/network.ru.lang
+++ b/xml/lang/ru/network.ru.lang
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="cp-1251" standalone="yes" ?>
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 
 <entries>
 
 <e id="T_LN_undefined_confidence_level"
    EN="undefined confidence level"
-   ru="неопределен доверительный интервал" />
+   ru="РЅРµРѕРїСЂРµРґРµР»РµРЅ РґРѕРІРµСЂРёС‚РµР»СЊРЅС‹Р№ РёРЅС‚РµСЂРІР°Р»" />
 
 <e id="T_LN_undefined_type_of_actual_sigma"
    EN="Type of actual sigma is not defined (apriori / aposteriori)"
-   ru="Тип текущего среднего квадратического отклонения не определен  (apriori / aposteriori)" />
+   ru="РўРёРї С‚РµРєСѓС‰РµРіРѕ СЃСЂРµРґРЅРµРіРѕ РєРІР°РґСЂР°С‚РёС‡РµСЃРєРѕРіРѕ РѕС‚РєР»РѕРЅРµРЅРёСЏ РЅРµ РѕРїСЂРµРґРµР»РµРЅ  (apriori / aposteriori)" />
 
 </entries>
