--- a/xml/lang/ru/pobs.ru.lang
+++ b/xml/lang/ru/pobs.ru.lang
@@ -1,25 +1,25 @@
-<?xml version="1.0" encoding="cp-1251" standalone="yes" ?>
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 
 <entries>
 
 <e id="T_POBS_computation_of_bearing_for_identical_points"
    EN="Computation of bearing for identical points"
-   ru="Вычисление направления для одинаковых точек" />
+   ru="Р’С‹С‡РёСЃР»РµРЅРёРµ РЅР°РїСЂР°РІР»РµРЅРёСЏ РґР»СЏ РѕРґРёРЅР°РєРѕРІС‹С… С‚РѕС‡РµРє" />
 
 <e id="T_POBS_bad_data"
    EN="bad data"
-   ru="плохие данные" />
+   ru="РїР»РѕС…РёРµ РґР°РЅРЅС‹Рµ" />
 
 <e id="T_POBS_zero_or_negative_distance"
    EN="zero or negative distance"
-   ru="нулевое или отрицательное расстояние" />
+   ru="РЅСѓР»РµРІРѕРµ РёР»Рё РѕС‚СЂРёС†Р°С‚РµР»СЊРЅРѕРµ СЂР°СЃСЃС‚РѕСЏРЅРёРµ" />
 
 <e id="T_POBS_zero_or_negative_slope_distance"
    EN="zero or negative slope distance"
-   ru="нулевое или отрицательное наклонное расстояние" />
+   ru="РЅСѓР»РµРІРѕРµ РёР»Рё РѕС‚СЂРёС†Р°С‚РµР»СЊРЅРѕРµ РЅР°РєР»РѕРЅРЅРѕРµ СЂР°СЃСЃС‚РѕСЏРЅРёРµ" />
 
 <e id="T_POBS_zero_or_negative_zenith_angle"
    EN="zero or negative zenith angle"
-   ru="нулевой или отрицательный зенитный угол" />
+   ru="РЅСѓР»РµРІРѕР№ РёР»Рё РѕС‚СЂРёС†Р°С‚РµР»СЊРЅС‹Р№ Р·РµРЅРёС‚РЅС‹Р№ СѓРіРѕР»" />
 
 </entries>
